homepage/static/css/main.css
/* latin-ext */
@font-face {
  font-family: 'Audiowide';
  font-style: normal;
  font-weight: 400;
  src: local('Audiowide Regular'), local('Audiowide-Regular'), url(https://fonts.gstatic.com/s/audiowide/v8/l7gdbjpo0cum0ckerWCdmA_OIxo.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Audiowide';
  font-style: normal;
  font-weight: 400;
  src: local('Audiowide Regular'), local('Audiowide-Regular'), url(https://fonts.gstatic.com/s/audiowide/v8/l7gdbjpo0cum0ckerWCdlg_O.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}


html {
  font-size: 14px; /* decreased base font size by ~2px (from 16px to 14px) */
}

body,
html {
  height: 100%;
  background-color: #ffffff; /* site background set to white */
  color: #222222; /* default text color for legibility on white background */
}

body {
  background-image: url('https://images.unsplash.com/photo-1764046155497-ad7e50737ffa?w=1200&h=600&fit=crop');
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  z-index: 0;
}

body::before {
  content: '';
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.92);
  z-index: -1;
  pointer-events: none;
}

.form-group{
  color: #222222;
}

label{
  color: #222222;
  font-size: 2rem;
}

.fal{               /* Add any text to turn white (now dark for white BG) */
  color: #222222;
}

.breadcrumb{
  background-color: #ea2088;
  color:#ff9df0;
}

p{
  color: #222222;   /* For About */
}

a{
  color:#ea2088;
}

ol li a{
  color:black;
}

ol,li,a:hover{
  color:#ea2088 ;
}

.navbar-collapse > .navbar-nav { 
  background-color: #000000; 
}


.breadcrumb-item{
  color:white;
}
.breadcrumb-item.active{
  color:white;
}


.the-blur{
  position: fixed;
  top:0;
  width: 100%;
  height: 100px;
  margin-bottom: 20px;
  margin-top: -30px;
  background: black;
  z-index:1010;
  -webkit-filter: blur(20px);
  -moz-filter: blur(20px);
  -o-filter: blur(20px);
  -ms-filter: blur(20px);
  filter: blur(10px);
}

.id_data{                             
  color:red;
  border: 1px solid #ccc;
  display: inline-block;
  padding: 6px 12px;
  cursor: pointer;
}

#particles-js canvas {
  display: block;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
  transition: opacity .8s ease, transform 1.4s ease
}

#particles-js {
  background: #080901; 
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: -10;
  top: 0;
  left: 0;
  margin-top: 0rem;
}


.table-css{
  color:#222222;
}

.btn-primary{
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

h1, h2, h3, h4, h5, h6 {
  color: #222222;
}

ul {
  margin: 0;
}

.bg-steel {
  background-color: #2E3141;  
  border-width: 0px;
  -webkit-box-shadow: 0px 0px;
  box-shadow: 0px 0px;
  background-color: rgba(0,0,0,0.0);
  background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
  background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
  background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
}

.site-header .navbar-nav .nav-link {
  color: #cbd5db;
}

.site-header .navbar-nav .nav-link:hover {
  color: #ea2088;
}

.navbar-colapse{
  background-color:black;
  color:white;
  box-shadow: 0 2px 7px #ea2088;
}


.dropdown-menu{
  background-color:black;
  color:white;
  box-shadow: 0 2px 7px #ea2088;
}
.dropdown-item{
  color:white;
}

.dropdown-item:hover{
  background-color:black;
  color: #ea2088;
}

.site-header .navbar-nav .nav-link.active {
  font-weight: 500;
}

.content-section {
  background: transparent;
  box-shadow: 0 4px 10px #ea2088;
  color: #222222;
  padding: 10px 20px;
  border: 1px solid #dddddd;
  border-radius: 3px;
  margin-bottom: 20px;
}

.article-title {
  color: #444444;
}

a.article-title:hover {
  color: #428bca;
  text-decoration: none;
}

.article-content {
  white-space: pre-line;
}

.article-img {
  height: 65px;
  width: 65px;
  margin-right: 16px;
}

.article-metadata {
  padding-bottom: 1px;
  margin-bottom: 4px;
  border-bottom: 1px solid #e3e3e3
}

.article-metadata a:hover {
  color: #333;
  text-decoration: none;
}

.article-svg {
  width: 25px;
  height: 25px;
  vertical-align: middle;
}

.account-img {
  height: 125px;
  width: 125px;
  margin-right: 20px;
  margin-bottom: 16px;
}

.account-heading {
  font-size: 2.5rem;
}



/* { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }

html { width: 100%; height:100%; overflow:hidden; }
*/



/* Navbar title CSS */
.titlefont{
  color: #228DFF;
  font-family: Audiowide;
}

.align-middle{
  text-align: center;
}

.textinput{
  background-color: #4F102B;
  color: white;
}

.textinput:disabled{
  background-color: rgb(158, 27, 84);
  color: white;
}

.putprice {
  background-color: #9e1b54 !important;
  color: white;
}

.emailinput{
  background-color: #4F102B;
  color: white;
}

.emailinput.focus{
  background-color: #4F102B;
  color: white;
}

.textinput:focus{
  background-color:#4F102B;
  color: white;
}

.ghost-button {
  color: rgb(255, 255, 255);
  background-color: transparent;
  border: 2px solid rgb(255, 255, 255);
  font-size: 17px;
  padding: 7px 12px;
  font-weight: bolder;
  transition-duration: 0.2s;
  display: inline-block;
  text-decoration: none;
  font-family: 'Open Sans', sans-serif;
  min-width: 120px;
  border-radius: 8px;
}

.ghost-button:hover, .ghost-button:active {
  color:#fff;
  background-color:transparent;
  box-shadow: 0 2px 7px #ffffff;
}


.ghost-blue {
  color: #228DFF;
  background-color: transparent;
  border: 2px solid #228DFF;
  font-size: 17px;
  padding: 7px 12px;
  font-weight: bolder;
  transition-duration: 0.2s;
  display: inline-block;
  text-decoration: none;
  font-family: 'Open Sans', sans-serif;
  min-width: 120px;
  border-radius: 8px;
}

.ghost-blue:hover, .ghost-blue:active {
  color:#fff;
  background-color:transparent;
  box-shadow: 0 2px 7px #0000ff;
}


.ghost-green {
  color: #27ff34;
  background-color: transparent;
  border: 2px solid #27ff34;
  font-size: 17px;
  padding: 7px 12px;
  font-weight: bolder;
  transition-duration: 0.2s;
  display: inline-block;
  text-decoration: none;
  font-family: 'Open Sans', sans-serif;
  min-width: 120px;
  border-radius: 8px;
}

.ghost-green:hover, .ghost-green:active {
  color:#fff;
  background-color:transparent;
  box-shadow: 0 2px 7px #27ff34;
}
 

.ghost-pink {
  color: #ea2088;
  background-color: transparent;
  border: 2px solid #ea2088;
  font-size: 17px;
  padding: 7px 12px;
  transition-duration: 0.2s;
  font-weight: bolder;
  display: inline-block;
  text-decoration: none;
  font-family: 'Open Sans', sans-serif;
  min-width: 120px;
  border-radius: 8px;
}

.ghost-pink:hover, .ghost-pink:active {
  color:#fff;
  background-color:transparent;
  box-shadow: 0 2px 7px #ea2088;
}


.ghost-red {
  color:#ff3c16;
  background-color: transparent;
  border: 2px solid #ff3c16;
  font-size: 17px;
  padding: 7px 12px;
  font-weight: bolder;
  transition-duration: 0.2s;
  display: inline-block;
  text-decoration: none;
  font-family: 'Open Sans', sans-serif;
  min-width: 120px;
  border-radius: 8px;
}

.ghost-red:hover, .ghost-red:active {
  color:#fff;
  background-color:transparent;
  box-shadow: 0 2px 7px #ff3c16;
}


.glow{
  background-color: #014c8f;
}

.glow:hover {
  background-color: #014c8f;
  color: white;
  box-shadow: 0 2px 7px #ea2088;
}

.btn-pink{
  color:#fff;
  background-color:#ea2088;
  border-color: #fff;
  border-left-color: #ea2088;
}

.btn-pink:hover{
  color:#fff;
  background-color:#f03d99;
  border-color:#f03d99;
}

.panel-heading-text{
  color: #f03d99;
  font-size: 1.7rem;
  border-bottom: 2px solid white;
  margin-bottom: 10px;
}

.panel-body-text{
  font-size: 1.2rem;
}

